# CloudFormationMinecreaft

./: .gitignore  README.md  ServerManagementJob.py  StartStopLambda.py  template.yaml
ServerApi/: build-api.sh  pyproject.toml
ServerApi/src/: lambda_function.py
ServerManagementJob/: build-management-job.sh  pyproject.toml
ServerManagementJob/src/: lambda_function.py
