[tool.poetry]
name = "server-api"
version = "0.1.0"
description = ""
authors = ["Elusive Zenith <26206679+ElusiveZenith@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.140"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
